<resources>
    <string name="app_name">DesignTask</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait">قيد الانتظار</string>
    <string name="accept">تم القبول</string>
    <string name="cancel">تم الالغاء</string>
    <string name="tittle">ابى اروح الهايبر وما عندى سياره ممكن حد يودينى </string>
    <string name="tittle2">بنات ضرورى عندى عزومه وابى حد يساعدنى </string>
    <string name="from_hour">منذ ساعه</string>
    <string name="men">رجال</string>
    <string name="car_ph">فزعه سياره</string>
    <string name="num_car_ph">2 فزعوا</string>
</resources>
